tests/lowering/field-outside-constructor.stderr
error[E017]: `field` used outside of a constructor declaration
 >>> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:1
  |
3 | data X (field A: Type): (field m: M) -> X =
  | ------------------------------------------- not a constructor
  |
 >>> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:9
  |
3 | data X (field A: Type): (field m: M) -> X =
  |         ^^^^^ 
  |

error[E017]: `field` used outside of a constructor declaration
 >>> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:1
  |
3 | data X (field A: Type): (field m: M) -> X =
  | ------------------------------------------- not a constructor
  |
 >>> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:26
  |
3 | data X (field A: Type): (field m: M) -> X =
  |                          ^^^^^ 
  |

error: aborting due to 2 previous errors

