tests/lowering/field-outside-constructor.lushui
;; TEST fail check

data X (field A: Type): (field m: M) -> X =

